--- a/index.html
+++ b/index.html
@@ -3,14 +3,17 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>MB — Liquid Studio</title>
+<title>MB — Liquid Refraction Studio</title>
 
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;500;600&display=swap" rel="stylesheet">
+
 <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r152/three.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/three@0.152.0/examples/js/postprocessing/EffectComposer.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/three@0.152.0/examples/js/postprocessing/RenderPass.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/three@0.152.0/examples/js/postprocessing/UnrealBloomPass.js"></script>
 
 <style>
 
-/* ================= BASE ================= */
 *{
   margin:0;
   padding:0;
@@ -19,8 +22,8 @@
 }
 
 body{
-  background:#0a0a0a;
-  color:#eaeaea;
+  background:#070707;
+  color:#f5f5f5;
   overflow:hidden;
   cursor:none;
 }
@@ -31,7 +34,7 @@ canvas{
   z-index:-1;
 }
 
-/* ================= CURSOR ================= */
+/* Cursor */
 .cursor{
   position:fixed;
   width:14px;
@@ -49,7 +52,7 @@ canvas{
   background:#fff;
 }
 
-/* ================= NAV ================= */
+/* Nav */
 nav{
   position:fixed;
   top:40px;
@@ -73,13 +76,13 @@ nav span:hover{
   color:#fff;
 }
 
-/* ================= SECTIONS ================= */
+/* Sections */
 .section{
   position:absolute;
   inset:0;
   display:flex;
-  align-items:center;
   justify-content:center;
+  align-items:center;
   text-align:center;
   opacity:0;
   transition:1s ease;
@@ -90,7 +93,7 @@ nav span:hover{
 }
 
 h1{
-  font-size:clamp(50px,6vw,100px);
+  font-size:clamp(60px,6vw,110px);
   font-weight:500;
 }
 
@@ -115,14 +118,14 @@ p{
 <section id="home" class="section active">
   <div>
     <h1>Industrial Design</h1>
-    <p>Liquid. Material. Structure.</p>
+    <p>Liquid Refraction Experience</p>
   </div>
 </section>
 
 <section id="about" class="section">
   <div>
-    <h1>Architectural Thinking</h1>
-    <p>Engineering clarity meets spatial awareness.</p>
+    <h1>Architectural Clarity</h1>
+    <p>Glass. Material. Structure.</p>
   </div>
 </section>
 
@@ -135,7 +138,7 @@ p{
 
 <script>
 
-/* ================= CUSTOM CURSOR ================= */
+/* ================= CURSOR ================= */
 const cursor=document.querySelector(".cursor");
 
 document.addEventListener("mousemove",e=>{
@@ -143,43 +146,59 @@ document.addEventListener("mousemove",e=>{
   cursor.style.top=e.clientY+"px";
 });
 
-/* ================= SHADER BACKGROUND ================= */
+/* ================= THREE SETUP ================= */
 
 let scene = new THREE.Scene();
 let camera = new THREE.Camera();
-camera.position.z = 1;
-
 let renderer = new THREE.WebGLRenderer({ alpha:true });
 renderer.setSize(window.innerWidth, window.innerHeight);
 document.body.appendChild(renderer.domElement);
 
+/* Post-processing */
+let composer = new THREE.EffectComposer(renderer);
+let renderPass = new THREE.RenderPass(scene, camera);
+composer.addPass(renderPass);
+
+let bloomPass = new THREE.UnrealBloomPass(
+  new THREE.Vector2(window.innerWidth, window.innerHeight),
+  0.5,
+  0.4,
+  0.85
+);
+composer.addPass(bloomPass);
+
+/* Uniforms */
 let uniforms = {
   u_time: { value: 0.0 },
   u_resolution: { value: new THREE.Vector2() },
-  u_mouse: { value: new THREE.Vector2() }
+  u_mouse: { value: new THREE.Vector2() },
+  u_progress: { value: 0.0 }
 };
 
 let material = new THREE.ShaderMaterial({
   uniforms: uniforms,
   vertexShader: `
-    void main() {
-      gl_Position = vec4(position, 1.0);
+    void main(){
+      gl_Position = vec4(position,1.0);
     }
   `,
   fragmentShader: `
     uniform float u_time;
     uniform vec2 u_resolution;
     uniform vec2 u_mouse;
+    uniform float u_progress;
 
     void main(){
+
       vec2 st = gl_FragCoord.xy / u_resolution.xy;
       float dist = distance(st, u_mouse);
-      float wave = sin(dist * 20.0 - u_time * 2.0);
-      float strength = 0.02 / dist;
 
-      vec3 color = vec3(0.05 + wave * strength);
+      float ripple = sin(dist * 40.0 - u_time * 3.0) * 0.02;
+      float displacement = ripple + u_progress * 0.3;
 
-      gl_FragColor = vec4(color, 1.0);
+      vec3 color = vec3(0.05 + displacement);
+
+      gl_FragColor = vec4(color,1.0);
     }
   `
 });
@@ -190,13 +209,14 @@ scene.add(mesh);
 
 function animate(time){
   uniforms.u_time.value = time * 0.001;
-  renderer.render(scene, camera);
+  composer.render();
   requestAnimationFrame(animate);
 }
 requestAnimationFrame(animate);
 
 function resize(){
   renderer.setSize(window.innerWidth, window.innerHeight);
+  composer.setSize(window.innerWidth, window.innerHeight);
   uniforms.u_resolution.value.set(window.innerWidth, window.innerHeight);
 }
 window.addEventListener("resize", resize);
@@ -210,18 +230,24 @@ document.addEventListener("mousemove", e=>{
 });
 
 /* ================= LIQUID TRANSITION ================= */
+
 const sections=document.querySelectorAll(".section");
 
 document.querySelectorAll("nav span").forEach(btn=>{
   btn.addEventListener("click",()=>{
+
     const target=document.getElementById(btn.dataset.target);
     const current=document.querySelector(".section.active");
+
     if(target===current) return;
 
-    current.classList.remove("active");
+    uniforms.u_progress.value = 1.0;
+
     setTimeout(()=>{
+      current.classList.remove("active");
       target.classList.add("active");
-    },300);
+      uniforms.u_progress.value = 0.0;
+    },600);
   });
 });
 
